Began working on param search

--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -158,6 +158,11 @@ textarea {
   resize: vertical;
 }
 
+.fieldset-search-form .check_boxes > .controls {
+  height: auto;
+  overflow: hidden;
+}
+
 .info-tab {
   width: 25%;
 
