--- a/plantsuwa/app/views/layouts/application.html.erb
+++ b/plantsuwa/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html manifest="/application.manifest">
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
