--- a/plantsuwa/app/views/current_photos/show.html.erb
+++ b/plantsuwa/app/views/current_photos/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, @current_photo.id) %>
+<% provide(:title, @current_photo.id.to_s) %>
 
 <%= render partial: 'admin_pages/generic_admin_show', locals: {object: @current_photo, objects_path: current_photos_path, edit_object_path: edit_current_photo_path(@current_photo), object_path: current_photo_path(@current_photo), object_prevpage: 'Photos', object_name: 'photo', object_has_colour: false } %>
 
