--- a/plantsuwa/app/views/current_photos/_current_photo.html.erb
+++ b/plantsuwa/app/views/current_photos/_current_photo.html.erb
@@ -9,7 +9,7 @@
 
   <td><%= link_to display_name(current_photo.current_plant), admin_current_plant_path(current_photo.current_plant) %></td>
 
-	<% if !current_photo.description.empty? %>
+	<% if current_photo.description %>
 		<td class="thd-disappear"><%= link_to current_photo.description, current_photo_path(current_photo) %></td>
 	<% else %>
 		<td class="no-description thd-disappear"><%= link_to '(no description)', current_photo_path(current_photo) %></td>
