--- a/plantsuwa/app/views/current_plants/search.html.erb
+++ b/plantsuwa/app/views/current_plants/search.html.erb
@@ -6,6 +6,26 @@
 	
 	<div style="height: 40px"></div>
 
+
+
+	<% if @searched %>
+		<div class="center-wrapper">
+	  	<div class="center-wrapper-inner">
+				<h2>Search Results: </h2>
+			</div>
+		</div>
+		<%= render @current_plants %>
+		<div class="center-wrapper">
+	  	<div class="center-wrapper-inner">
+	  		<hr/>
+				<dt><%= @results_count %> plants found.</dt>
+			</div>
+		</div>
+		<div style="height: 40px"></div>
+	<% end %>
+
+
+
 	<div class="center-wrapper">
 	  <div class="center-wrapper-inner">
 			<h2>Keyword Search</h2>
@@ -13,7 +33,7 @@
 	</div>
 	<br/>
 	<fieldset class="fieldset-search-form">
-	  <%= form_tag current_plants_path, :method => :get do %>
+	  <%= form_tag search_current_plants_path, :method => :get do %>
 		  	<div class="search-bar-container">
 		  		<div style="width: 70%; float: left">
 		    		<%= auto_complete_field_tag_jquery(:search, params[:search], {:placeholder => "Search Plants", class: 'form-control' }) %>
@@ -34,7 +54,7 @@
 		</div>
 	</div>
 	<br/>
-	<%= simple_form_for('plants', :method => :get, :url => url_for(:action => 'index_param_search'), html: { class: 'form-horizontal' , :'accept-charset' => "UTF-8"}, defaults: { input_html: { class: 'form-control' } }) do |f| %>
+	<%= simple_form_for('plants', :method => :get, :url => url_for(:action => 'search'), html: { class: 'form-horizontal' , :'accept-charset' => "UTF-8"}, defaults: { input_html: { class: 'form-control' } }) do |f| %>
 
 		<fieldset class="fieldset-search-form">
 
