--- a/plantsuwa/app/views/current_plants/search.html.erb
+++ b/plantsuwa/app/views/current_plants/search.html.erb
@@ -4,9 +4,7 @@
 
 <div class="padding-mobile">
 	
-	<div style="height: 40px"></div>
-
-
+	<div style="height: 20px"></div>
 
 	<% if @searched %>
 		<div class="center-wrapper">
@@ -18,95 +16,118 @@
 		<div class="center-wrapper">
 	  	<div class="center-wrapper-inner">
 	  		<hr/>
-				<dt><%= @results_count %> plants found.</dt>
+				<dt><%= pluralize(@results_count, 'plant') %> found.</dt>
 			</div>
 		</div>
 		<div style="height: 40px"></div>
+
+	<hr/>	
+	<div class="center-wrapper">
+	 	<div class="center-wrapper-inner">
+			<button class="btn btn-primary" id="search-another-button" style="padding-left: 50px; padding-right: 50px"><i class="fa fa-search-plus"></i>&nbsp;&nbsp;Search Again!</button>
+		</div>
+	</div>
+	<br/>
+
 	<% end %>
 
 
 
-	<div class="center-wrapper">
-	  <div class="center-wrapper-inner">
-			<h2>Keyword Search</h2>
-		</div>
-	</div>
-	<br/>
-	<fieldset class="fieldset-search-form">
-	  <%= form_tag search_current_plants_path, :method => :get do %>
-		  	<div class="search-bar-container">
-		  		<div style="width: 70%; float: left">
-		    		<%= auto_complete_field_tag_jquery(:search, params[:search], {:placeholder => "Search Plants", class: 'form-control' }) %>
-		    	</div>
-		    	<button id='submit_search' class="btn btn-primary" style="width: 30%; float: right"><i class="fa fa-search"></i>&nbsp;Search</button>
-			  </div>
-		  </div>
-	  <% end %>
-	</fieldset>
-	
-	<div style="height: 70px"></div>
-	<hr/>
-	<div style="height: 10px"></div>
+	<div id="search-form-hidden">
 
-	<div class="center-wrapper">
-	  <div class="center-wrapper-inner">
-			<h2>Parameter Search</h2>
-		</div>
-	</div>
-	<br/>
-	<%= simple_form_for('plants', :method => :get, :url => url_for(:action => 'search'), html: { class: 'form-horizontal' , :'accept-charset' => "UTF-8"}, defaults: { input_html: { class: 'form-control' } }) do |f| %>
 
+		<div class="center-wrapper">
+		  <div class="center-wrapper-inner">
+				<h2>Keyword Search</h2>
+			</div>
+		</div>
+		<br/>
 		<fieldset class="fieldset-search-form">
+		  <%= form_tag search_current_plants_path, :method => :get do %>
+			  <div class="search-bar-container">
+			  	<div style="width: 70%; float: left">
+			   		<%= auto_complete_field_tag_jquery(:search, params[:search], {:placeholder => "Search Plants", class: 'form-control' }) %>
+			   	</div>
+			   	<button id='submit_search' class="btn btn-primary" style="width: 30%; float: right"><i class="fa fa-search"></i>&nbsp;Search</button>
+			  </div>
+		  <% end %>
+		</fieldset>
+		
+		<div style="height: 20px"></div>
+		<hr/>
+
+		<div class="center-wrapper">
+		  <div class="center-wrapper-inner">
+				<h2>Parameter Search</h2>
+			</div>
+		</div>
+		<br/>
+		<%= simple_form_for('plants', :method => :get, :url => url_for(:action => 'search'), html: { class: 'form-horizontal' , :'accept-charset' => "UTF-8"}, defaults: { input_html: { class: 'form-control' } }) do |f| %>
+
+			<fieldset class="fieldset-search-form">
 
 
-			<div class="row">
-				<div class="col-sm-6">	
-	
-					<legend class="legend-center-aligned">Descriptions</legend>
+				<div class="row">
+					<div class="col-sm-6">	
+		
+						<legend class="legend-center-aligned">Descriptions</legend>
 
-					<div class="center-wrapper">
-	  				<div class="center-wrapper-inner">		
-						  <%= f.input :type, collection: Type.all, label_method: :name, value_method: :id, label: 'Type', as: :check_boxes, required: false %>
-						 	<%= f.input :size, collection: Size.all, label_method: :name, value_method: :id, label: 'Size', as: :check_boxes, required: false %>
-						  <%= f.input :flower_colour, collection: FlowerColour.all, label_method: :name, value_method: :id, label: 'Flower Colour', as: :check_boxes, required: false %>
-						  <%= f.input :leaf_colour, collection: LeafColour.all, label_method: :name, value_method: :id, label: 'Leaf Colour', as: :check_boxes, required: false %>
-						  <br/>
-						 </div>
-					</div>
-				</div>
-				<div class="col-sm-6">
-					<legend class="legend-center-aligned">Architectural</legend>
-					<div class="center-wrapper">
-			  		<div class="center-wrapper-inner">
-							<%= f.input :climate, collection: Climate.all, label_method: :name, value_method: :id, label: 'Climate', as: :check_boxes, required: false %>
-							<%= f.input :soil_type, collection: SoilType.all, label_method: :name, value_method: :id, label: 'Soil Type', as: :check_boxes, required: false %>
+						<div class="center-wrapper">
+		  				<div class="center-wrapper-inner">		
+							  <%= f.input :type, collection: Type.all, label_method: :name, value_method: :id, label: 'Type', as: :check_boxes, required: false %>
+							 	<%= f.input :size, collection: Size.all, label_method: :name, value_method: :id, label: 'Size', as: :check_boxes, required: false %>
+							  <%= f.input :flower_colour, collection: FlowerColour.all, label_method: :name, value_method: :id, label: 'Flower Colour', as: :check_boxes, required: false %>
+							  <%= f.input :leaf_colour, collection: LeafColour.all, label_method: :name, value_method: :id, label: 'Leaf Colour', as: :check_boxes, required: false %>
+							  <br/>
+							 </div>
 						</div>
 					</div>
-					<br/>
-					<legend class="legend-center-aligned">Environmental</legend>
-					<div class="center-wrapper">
-	  				<div class="center-wrapper-inner">
-				 			<%= f.input :origin, collection: Origin.all, label_method: :name, value_method: :id, label: 'Origin', as: :check_boxes, required: false %>
-				  	</div>
-				  </div>
+					<div class="col-sm-6">
+						<legend class="legend-center-aligned">Architectural</legend>
+						<div class="center-wrapper">
+				  		<div class="center-wrapper-inner">
+								<%= f.input :climate, collection: Climate.all, label_method: :name, value_method: :id, label: 'Climate', as: :check_boxes, required: false %>
+								<%= f.input :soil_type, collection: SoilType.all, label_method: :name, value_method: :id, label: 'Soil Type', as: :check_boxes, required: false %>
+							</div>
+						</div>
+						<br/>
+						<legend class="legend-center-aligned">Environmental</legend>
+						<div class="center-wrapper">
+		  				<div class="center-wrapper-inner">
+					 			<%= f.input :origin, collection: Origin.all, label_method: :name, value_method: :id, label: 'Origin', as: :check_boxes, required: false %>
+					  	</div>
+					  </div>
+					</div>
+				</div>
+
+
+
+		  </fieldset>
+
+		  <br/>
+
+		  <div class="center-wrapper">
+		  	<div class="center-wrapper-inner">
+		  		<%= link_to_submit do %>
+
+					<button class="btn btn-primary"><i class="fa fa-search"></i>&nbsp;&nbsp;Search by Parameters</button>
+					<% end %>
 				</div>
 			</div>
+		<% end %>
+		<br/>
 
-
-
-	  </fieldset>
-
-	  <br/>
-
-	  <div class="center-wrapper">
-	  	<div class="center-wrapper-inner">
-	  		<%= link_to_submit do %>
-
-				<button class="btn btn-primary"><i class="fa fa-search"></i>&nbsp;&nbsp;Search by Parameters</button>
-				<% end %>
-			</div>
-		</div>
-	<% end %>
-	<br/>
+	</div>
 
 </div>
+
+<script type="text/javascript">
+	<% if @searched %>
+		$("#search-form-hidden").hide();
+	<% end %>
+	$("#search-another-button").click(function(){
+  	$("#search-form-hidden").slideDown();
+  	$('html').animate({scrollTop : $(document).height() - 100 },500);
+  	$("#search-another-button").hide();
+	}); 
+</script>
