--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -537,6 +537,42 @@ legend {
 
 
 
+table, .table > tbody > tr > td, .table > thead > tr > th, .table-responsive {
+  border: 0;  
+}
+
+.table > tbody > tr > td {
+  vertical-align: middle;
+}
+
+.table-striped>tbody>tr:nth-child(even)>td, 
+.table-striped>tbody>tr:nth-child(even)>th {
+  background: none;
+ }
+
+.table-striped>tbody>tr:nth-child(odd)>td, 
+.table-striped>tbody>tr:nth-child(odd)>th {
+  background: #eee;
+ }
+
+tr:nth-child(odd) td:first-child {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+tr:nth-child(odd) td:last-child {
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+
+
+
+
+
+
+
+
 /* Media Queries */
 
 @media (max-width: 768px) {
