--- a/plantsuwa/app/views/admin_pages/_bottom_admin_bar_other_tables_list.html.erb
+++ b/plantsuwa/app/views/admin_pages/_bottom_admin_bar_other_tables_list.html.erb
@@ -1,6 +1,7 @@
+
 <li class="admin-minibutton">
   <%= link_to admin_path do %>
-    <i class="fa fa-gavel"></i>
+    <i class="fa fa-gavel"></i><span class="admin-list-name">&nbsp;Administration</span>
   <% end %>
 </li>
 <li class="admin-minibutton minidivider">|
