--- a/plantsuwa/app/views/current_plants/_form.html.erb
+++ b/plantsuwa/app/views/current_plants/_form.html.erb
@@ -138,16 +138,14 @@
 
     <hr/>
 
-<%= render partial: 'action_tabs_form', locals: { f: f } %>
+    <%= render partial: 'layouts/ui/action_tabs_form', locals: { f: f } %>
 
   <% end %>
-
-  <div style="height: 40px"></div>
 
     
 
 </div> <!-- padding-mobile -->
-<%= render 'bottom_tabs_show' %>
+<%= render 'layouts/ui/bottom_tabs_show' %>
 
 
 
