--- a/plantsuwa/app/views/layouts/application.html.erb
+++ b/plantsuwa/app/views/layouts/application.html.erb
@@ -32,6 +32,8 @@
     <div class="container">
       <div style="height: 64px"></div>
   	    <%= yield %>
+        <!-- To allow space for the bottom tabs -->
+        <div style="height: 40px"></div>
       </div>
     </div>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
