--- a/plantsuwa/app/views/current_plants/index.html.erb
+++ b/plantsuwa/app/views/current_plants/index.html.erb
@@ -12,14 +12,11 @@
 
 <%= render @current_plants %>
 
-<!-- To allow space for the bottom tabs -->
-<div style="height: 40px"></div>
-
 <% if signed_in? %>
   <div style="height: 30px"></div>
-  <%= render 'action_tab_favourites' %>
-  <%= render 'action_tab_new' %>
+  <%= render 'layouts/ui/action_tab_favourites' %>
+  <%= render 'layouts/ui/action_tab_new' %>
 <% end %>
 
-<%= render 'bottom_tabs_index' %>
+<%= render 'layouts/ui/bottom_tabs_default' %> <!-- render 'index' instead of 'default' for the types, etc -->
 
