--- a/plantsuwa/app/views/welcome/index.html.erb
+++ b/plantsuwa/app/views/welcome/index.html.erb
@@ -31,5 +31,14 @@
 </div>
 
 
+<% if signed_in? %>
+  <div style="height: 30px"></div>
+  <%= render 'layouts/ui/action_tab_favourites' %>
+  <%= render 'layouts/ui/action_tab_new' %>
+<% end %>
+
+<%= render 'layouts/ui/bottom_tabs_default' %>
+
+
 
 
