--- a/plantsuwa/app/views/current_plants/_current_plant_search_result.html.erb
+++ b/plantsuwa/app/views/current_plants/_current_plant_search_result.html.erb
@@ -1,8 +1,9 @@
 <tr>
   <td style="height: 48px; width: 40px">
-    <%= link_to current_plant_path(current_plant) do %>
+    <%= link_to current_plant_path(current_plant, pp_name: 'Results', pp_path: request.original_url) do %>
       <%= image_tag current_plant.display_photo.url(:thumb), height:"100%", alt:"Plant photo", class:"img-circle" %>
     <% end %>
   </td>
-  <td><%= link_to display_name(current_plant), current_plant_path(current_plant) %></td>
+  <td><%= link_to display_name(current_plant), current_plant_path(current_plant, pp_name: 'Results', pp_path: request.original_url) %></td>
+  <td><%= link_to current_plant_path(current_plant, pp_name: 'Results', pp_path: request.original_url) do %><i class="fa fa-chevron-right"></i><% end %></td>
 </tr>
