--- a/plantsuwa/app/views/current_plants/index.html.erb
+++ b/plantsuwa/app/views/current_plants/index.html.erb
@@ -3,12 +3,7 @@
 <% provide(:prev_link, root_path) %>
 
 
-<div class="plant-index-tab">
-  <p><strong>Climbers</strong></p>
-</div>
-
-<!-- To allow for space for the group headings -->
-<div style="height: 10px"></div>
+<div style="margin-top: -15px"></div>
 
 <%= render @current_plants %>
 
