--- a/plantsuwa/app/views/layouts/ui/_action_tabs_form.html.erb
+++ b/plantsuwa/app/views/layouts/ui/_action_tabs_form.html.erb
@@ -1,4 +1,4 @@
-<%= link_to yield(:prev_link) do %>
+<%= link_to :back do %>
 <div class="action-tab">
   <div class="center-wrapper">
     <div style="display: inline-block;">
