--- a/plantsuwa/app/views/layouts/_navbar.html.erb
+++ b/plantsuwa/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,12 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container-fluid">
-	  <% if !yield(:prev_page).blank? %>
+		<% if params.has_key?(:pp_name) %>
+	    <%= link_to params[:pp_path] do %>
+	    	<div class="navbar-brand navbar-prev-page-block">
+	     		<i class="fa fa-chevron-left"></i>&nbsp;&nbsp;<%= params[:pp_name].html_safe %>
+	      </div>
+	    <% end %>
+	  <% elsif !yield(:prev_page).blank? %>
 	    <%= link_to yield(:prev_link) do %>
 	    	<div class="navbar-brand navbar-prev-page-block">
 	     		<i class="fa fa-chevron-left"></i>&nbsp;&nbsp;<%= truncate(yield(:prev_page), length: 20, escape: false) %>
@@ -24,7 +30,7 @@
 		    <span class="icon-bar"></span>
 	    </button>
 
-		    <%= link_to search_current_plants_path do %>
+		    <%= link_to search_current_plants_path(pp_name: yield(:title), pp_path: request.original_url) do %>
 		      <p class="navbar-brand navbar-brand-custom" style="padding-right: 9px"><i class="fa fa-search"></i></p>
 		    <% end %>
 		    <%= link_to root_path do %>
