--- a/plantsuwa/app/views/layouts/ui/_action_tab_new.html.erb
+++ b/plantsuwa/app/views/layouts/ui/_action_tab_new.html.erb
@@ -1,4 +1,4 @@
-<%= link_to new_current_plant_path do %>
+<%= link_to new_current_plant_path(pp_name: yield(:title), pp_path: request.path) do %>
   <div class="action-tab" style="left: 50%">
     <div class="center-wrapper">
       <div style="display: inline-block;">
