--- a/plantsuwa/app/views/layouts/ui/_bottom_tabs_default.html.erb
+++ b/plantsuwa/app/views/layouts/ui/_bottom_tabs_default.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <%= link_to root_path do %>
-	<% if controller_name == "welcome" %>
+	<% if controller_name == "welcome" or controller_name == "sessions" or controller_name == "users" %>
 		<div class="info-tab info-tab-current info-tab-33" style="left: 33.3333333%;">
 		  <p><i class="fa fa-lg fa-home"></i>&nbsp;&nbsp;Home</p>
 		</div>
