--- a/plantsuwa/app/views/users/_form.html.erb
+++ b/plantsuwa/app/views/users/_form.html.erb
@@ -1,12 +1,23 @@
-<%= simple_form_for(@user, html: { class: 'form-horizontal' }, defaults: { input_html: { class: 'form-control' } }) do |f| %>
+<%= simple_form_for(@user, url: users_path(pp_path: params[:pp_path]), html: { class: 'form-horizontal' }, defaults: { input_html: { class: 'form-control' } }) do |f| %>
 
-  <%= f.input  :username, autofocus: true %>
-  <%= f.input  :email %>
-  <%= f.input  :password %>
-  <%= f.input  :password_confirmation %>
+	<div class="row">
+		<div class="col-sm-6">
+  		<%= f.input  :username, autofocus: true %>
+  		<%= f.input  :email %>
+  	</div>
+  	<div class="col-sm-6">
+		  <%= f.input  :password %>
+		  <%= f.input  :password_confirmation %>
+		</div>
+	</div>
 
   <br/>
   <hr/>
-  <%= f.button :submit, 'Sign Up', class: "button btn-success" %>
+
+  <div class="center-wrapper">
+  	<div class="center-wrapper-inner">
+  		<%= f.button :submit, 'Sign Up', class: "button btn-success", style: "min-width: 200px"%>
+  	</div>
+  </div>
 
 <% end %>
