--- a/plantsuwa/app/views/users/new.html.erb
+++ b/plantsuwa/app/views/users/new.html.erb
@@ -2,8 +2,11 @@
 <% provide(:prev_page, 'Home') %>
 <% provide(:prev_link, root_path) %>
 
-<h2>Sign Up</h2>
-
 <div class="padding-mobile">
+	<h2 style="text-align: center; margin-bottom: 35px">Sign Up</h2>
+	<hr/>
+
   <%= render 'form' %>
 </div>
+
+<%= render 'layouts/ui/bottom_tabs_default' %>
