paginated plants index
tried to implement infinite scrolling but couldn’t get it to work :(
was following http://railscasts.com/episodes/114-endless-page but
couldn’t get it working :/

--- a/plantsuwa/app/views/current_plants/index.html.erb
+++ b/plantsuwa/app/views/current_plants/index.html.erb
@@ -2,10 +2,12 @@
 <% provide(:prev_page, 'Home') %>
 <% provide(:prev_link, root_path) %>
 
+<% javascript :defaults, 'endless_page'%>
 
 <div style="margin-top: -15px"></div>
 
-<%= render @current_plants %>
+<%= render :partial => @current_plants %>
+<%= will_paginate @current_plants %>
 
 <% if signed_in? %>
   <div style="height: 30px"></div>
