--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -150,7 +150,7 @@
     <% end %>
 
     <% if not @current_plant.location_name.blank? %>
-	    <dt>Location Name</dt><p><%= nice_format(@current_plant.location_name) %></p>
+	    <dt>UWA Location</dt><p><%= nice_format(@current_plant.location_name) %></p>
     <% end %>
 
     <% if not @current_plant.general_info.blank? %>
